--- a/item-service-dev.yml
+++ b/item-service-dev.yml
@@ -1,7 +1,10 @@
 spring:
   application:
     name: item-service
-    
+  cloud:
+    config:
+      override-none: true
+      
 server:
   port: 8001
 
@@ -10,4 +13,4 @@ eureka:
     service-url:
       defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
       
-      
+     
